# platform-engineering-site

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE  README.md  archive.html  conf.py  index.html  mkdocs.yml  pyproject.toml  rss.xml  search.json  sitemap.xml  sitemapindex.xml
.concourse/: README.md  pipeline.py
.github/workflows/: c4-validation.yml  main.yml
architecture_maps/: README.md  docker-compose.yml
architecture_maps/c4gen/: __init__.py  cli.py  extract.py  landscape.py  openmetadata.py  pages.py  puml.py  render.py  schema.py
architecture_maps/models/: learn-ai.yaml  micromasters.yaml  mit-learn.cycles.json  mit-learn.graph.yaml  mit-learn.yaml  mitxonline-openedx.yaml  mitxonline.yaml  mitxpro.yaml  ocw-studio.yaml  odl-video-service.yaml  ol-data-platform.yaml  openedx.yaml  xpro-openedx.yaml
architecture_maps/scripts/: update_asset_versions.py
categories/: index.html
cookbooks_patterns/devops_patterns_cookbook/: index.html
discoveries/: index.html
discoveries/fargate_service_discovery/: index.html
discoveries/pe-product-infra-map/: index.html
docs/: index.md
docs/discoveries/: pe-product-infra-map.md
docs/getting_started/: developer_eks_access.md  emergency-break-glass.md  pe-product-infra-map.md  update_this_site.md  vault_access_for_developers.md
docs/stylesheets/: c4.css
hooks/: c4_inline.py
how_to/: index.html
javascripts/: c4-zoom.js
monitoring/: index.html
pages/: index.html  index.md
pe-product-infra-map/: index.html
port_mortem/: index.html
runbooks/: index.html
search/: search_index.json
(+413 files in other folders)
