[tool.poetry]
name = "platform-engineering-site"
version = "0.1.0"
description = "MIT Online Learning Platform Engineering Website"
authors = ["MIT Online Learning Devops <ol-devops@mit.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nikola = {version = "^8.3.1", extras = ["extras"]}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
